# Mac-touchpad

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  SECURITY.md  bump.ps1
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  overlay.rs  speed.rs  startup.rs  window.rs
crates/core/src/contacts/: manager.rs
crates/core/src/gesture/: distance.rs  drag.rs  engine.rs  finger.rs  mod.rs  pinch.rs  swipe.rs  tap.rs  two_finger.rs
crates/core/src/hid/: mod.rs  parser.rs  raw_input.rs  types.rs
crates/core/src/input/: keyboard.rs  mod.rs  mouse.rs  smooth_scroll.rs  wheel_hook.rs
scratch/: crop_image.ps1  test_update.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html
