[package]
name = "mac-touchpad"
version = "0.1.1"
description = "MacTouchpad - Mac 触控板手势 for Windows"
edition = "2021"

[lib]
name = "mac_touchpad_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Our core engine
mac-touchpad-core = { path = "../crates/core" }
