[package]
name = "mac-touchpad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
winreg = "0.52"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tracing = "0.1"
md-5 = "0.10"
